--- a/main.html
+++ b/main.html
@@ -9,6 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		<div>
+		My current favourite song is <<a href="https://youtu.be/cRbd4eB4g04">Arziyaan</a>>
+	</div>
 </script>
 
 </body>
