--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div>
-		<a href="https://www.youtube.com/watch?v=1UGq-caFOFE"/>
+		<a href="https://www.youtube.com/watch?v=1UGq-caFOFE">
 		My current favourite song is <<a href="https://youtu.be/cRbd4eB4g04">Arziyaan</a>>
 	</div>
 </body>
